--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,11 @@
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="shortcut icon" href="/images/reallyheadup.jpg" type="images/x-icon">
+        <link rel="icon" href="/images/reallyheadup.jpg" type="images/x-icon">
+        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
+
+
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
 
